--- a/appspec.yml
+++ b/appspec.yml
@@ -7,6 +7,14 @@ files:
     destination: /home/ec2-user/express-service
   - source: /node_modules
     destination: /home/ec2-user/express-service/node_modules
+  - source: /config
+    destination: /home/ec2-user/express-service/config
+  - source: /routes
+    destination: /home/ec2-user/express-service/routes
+  - source: /views
+    destination: /home/ec2-user/express-service/views
+  - source: /public
+    destination: /home/ec2-user/express-service/public
 hooks:
   AfterInstall:
     - location: scripts/install_dependencies
