--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "4.16.2",
     "axios": "^0.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "deepai": "^1.0.10",
+    "express": "4.16.2",
     "express-session": "^1.16.2",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
